test/spec_vectors/simd_i16x8_arith2/fail/module_10.wat
(module (func $i16x8.min_s-arg-empty (result v128) (i16x8.min_s)))